# auto-readme

./: .flake8  .gitignore  README.md  README_CN.md  config_template.json  pyproject.toml  requirements.txt  source.env  test_auto_description.py  test_error_handling.py  test_extended_auto_generation.py  test_generate.py  test_image_generation.py  test_t2i_config.py
aireadme_output/: dependencies_analysis.txt  project_structure.txt  requirements.txt  script_descriptions.json
src/aireadme/: config.py  core.py
src/aireadme/utils/: model_client.py
src/autoreadme/: config.py  core.py
src/autoreadme/utils/: cli.py  logo_generator.py  model_client.py
src/readmex/: BLANK_README.md  config.py  core.py  website_core.py
src/readmex/config/: language_mapping.json
src/readmex/templates/: BLANK_README.md
src/readmex/utils/: cli.py  dependency_analyzer.py  file_handler.py  model_client.py
tests/: test_auto_description.py  test_azure_openai_simple.py  test_core_threading.py  test_error_handling.py  test_extended_auto_generation.py  test_generate.py  test_image_generation.py  test_llm.py  test_logo_generator.py  test_t2i_config.py
